--- a/src/app/features/contact/contact.component.html
+++ b/src/app/features/contact/contact.component.html
@@ -1,12 +1,14 @@
-<div class="content lg-auto dummy" style="margin: 15px;">
+<div class="content lg-auto dummy">
 
   <form #form="ngForm"
+        class="form-style"
         (submit)="onSubmit()">
 
     <!--INPUT 1-->
-    <input class="form-control"
+    <label>Name:</label><br />
+    <input class="form-control input-field"
            type="text"
-           [(ngModel)]="model.version"
+           [(ngModel)]="model1.name"
            [ngClass]="{
           'is-invalid' : input1.invalid && input1.dirty,
           'is-valid' : !input1.invalid && input1.dirty
@@ -14,18 +16,18 @@
            name="input1"
            #input1="ngModel"
            required
-           minlength="6" />
+           minlength={{minLenName}} />
 
     <!----------->
     <div *ngIf="input1.errors && input1.dirty"
          class="invalid-feedback">
 
       <p *ngIf="input1.errors['minlength']">
-        Lunghezza minima consentita: {{minlengthVersion}}
+        Minumum number of characters: {{minLenName}}
       </p>
 
       <p *ngIf="input1.errors['required']">
-        Il campo e' obbligattorio
+        This field is mandatory.
       </p>
 
     </div>
@@ -34,10 +36,10 @@
     <br />
 
     <!--INPUT 2-->
-
-    <input class="form-control"
+    <label>Surname:</label><br />
+    <input class="form-control input-field"
            type="text"
-           [(ngModel)]="model.changelog"
+           [(ngModel)]="model1.surname"
            [ngClass]="{
           'is-invalid' : input2.invalid && input2.dirty,
           'is-valid' : !input2.invalid && input2.dirty
@@ -45,18 +47,112 @@
            name="input2"
            #input2="ngModel"
            required
-           minlength="10" />
+           minlength={{minLenSurname}} />
 
     <!----------->
     <div *ngIf="input2.errors && input2.dirty"
          class="invalid-feedback">
 
       <p *ngIf="input2.errors['minlength']">
-        Lunghezza minima consentita: {{minlengthChangelog}}
+        Minumum number of characters: {{minLenSurname}}
       </p>
 
       <p *ngIf="input2.errors['required']">
-        Il campo e' obbligattorio
+        This field is mandatory.
+      </p>
+
+    </div>
+    <!----------->
+
+    <br />
+
+    <!--INPUT 3-->
+    <label>Email:</label><br />
+    <input class="form-control input-field"
+           type="text"
+           [(ngModel)]="model1.email"
+           [ngClass]="{
+          'is-invalid' : input3.invalid && input3.dirty,
+          'is-valid' : !input3.invalid && input3.dirty
+         }"
+           name="input3"
+           #input3="ngModel"
+           required
+           minlength={{minLenEmail}} />
+
+    <!----------->
+    <div *ngIf="input3.errors && input3.dirty"
+         class="invalid-feedback">
+
+      <p *ngIf="input3.errors['minlength']">
+        Minumum number of characters: {{minLenEmail}}
+      </p>
+
+      <p *ngIf="input3.errors['required']">
+        This field is mandatory.
+      </p>
+
+    </div>
+    <!----------->
+
+    <br />
+
+    <!--INPUT 4-->
+    <label>Institution:</label><br />
+    <input class="form-control input-field"
+           type="text"
+           [(ngModel)]="model1.institution"
+           [ngClass]="{
+          'is-invalid' : input4.invalid && input4.dirty,
+          'is-valid' : !input4.invalid && input4.dirty
+         }"
+           name="input4"
+           #input4="ngModel"
+           required
+           minlength={{minLenEmail}} />
+
+    <!----------->
+    <div *ngIf="input4.errors && input4.dirty"
+         class="invalid-feedback">
+
+      <p *ngIf="input4.errors['minlength']">
+        Minumum number of characters: {{minLenInstitution}}
+      </p>
+
+      <p *ngIf="input4.errors['required']">
+        This field is mandatory.
+      </p>
+
+    </div>
+    <!----------->
+
+    <br />
+
+    <!--INPUT 5-->
+    <label>Message:</label><br />
+    <textarea class="form-control input-field"
+           type="text"
+           [(ngModel)]="model1.text"
+           [ngClass]="{
+          'is-invalid' : input5.invalid && input5.dirty,
+          'is-valid' : !input5.invalid && input5.dirty}"
+           name="input5"
+           #input5="ngModel"
+           required
+           minlength={{minLenText}}
+           rows="4">
+    </textarea>
+
+    <!----------->
+    <div *ngIf="input5.errors && input5.dirty"
+         class="invalid-feedback">
+
+      <p *ngIf="input5.errors['minlength']">
+        Message must be at least {{minLenText}} characters long!
+      </p>
+
+      <p *ngIf="input5.errors['required']">
+        This field is mandatory.
       </p>
 
     </div>
