--- a/src/app/features/history/history.component.html
+++ b/src/app/features/history/history.component.html
@@ -1,7 +1,8 @@
-<div class="content lg-auto dummy" style="margin: 15px;">
+<div class="content lg-auto dummy" style="margin: 15px; padding-top: 1em;">
 
   <div class="row sm-auto md-auto lg-auto">
     <h2>Check the source code at GitHub!</h2>
+    <br />
     <a class="link-git" href="https://github.com/linssab/XISMuS"> <img class="git-img" src="../../assets/github.png" /> </a>
   </div>
 
