--- a/src/app/features/contact/contact.component.css
+++ b/src/app/features/contact/contact.component.css
@@ -20,3 +20,10 @@
   font-style: oblique;
   font-family: Tahoma;
 }
+
+.error-msg {
+  max-width: 225px;
+  color: red;
+  font-size: 10pt;
+  font-family: Tahoma;
+}
