fixed horizontal scroll

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,10 +1,10 @@
-<div class="content lg-auto" style="margin: 15px;">
+<div class="content sm-auto md-auto lg-auto xl-auto">
 
   <!-- CARD 1 -->
 
-  <div class="row">
+  <div class="flex-row p-3">
 
-    <div class="row card1">
+    <div class="row">
 
       <div class="col col-12 col-sm-12 col-md-12 col-lg-5">
         <h2 class="h2-right">Analyze your data.<br />Simpler than ever.</h2>
@@ -24,22 +24,26 @@
   <!---------->
   <!-- CARD 2 -->
 
-  <div class="row card2">
+  <div class="flex-row">
 
-    <div class="row">
+    <div class="card2">
 
-      <div class="col col-12 col-sm-12 col-md-12 col-lg-5">
-        <h2 class="h2-card2">Merge different datasets.</h2>
+      <div class="row p-2">
+
+        <div class="col col-12 col-sm-12 col-md-12 col-lg-5">
+          <h2 class="h2-card2">Merge different<br />datasets.</h2>
+        </div>
+
+        <div class="col col-12 col-sm-12 col-md-12 col-lg-7">
+          <p class="text">{{card2Testo}}</p>
+        </div>
+
       </div>
 
-      <div class="col col-12 col-sm-12 col-md-12 col-lg-7">
-        <p class="text">{{card2Testo}}</p>
+      <div class="row">
+        <img class="img-fluid" src="../../assets/figure2.png" />
       </div>
 
-    </div>
-
-    <div class="row">
-      <img class="img-fluid" src="../../assets/figure2.png" />
     </div>
 
   </div>
@@ -49,9 +53,9 @@
   <!---------->
   <!-- CARD 3 -->
 
-  <div class="row">
+  <div class="flex-row p-3">
 
-    <div class="row card1">
+    <div class="row">
 
       <div class="col col-12 col-sm-12 col-md-12 col-lg">
         <div class="row">
